--- a/index.html
+++ b/index.html
@@ -5,6 +5,59 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Dramastruktuur en Kenmerke</title>
     <link rel="stylesheet" href="style.css">
+    <style>
+        body {
+            font-family: Arial, sans-serif;
+            background-color: #fdf6f0;
+            color: #333;
+            margin: 0;
+            padding: 0;
+        }
+
+        header {
+            background-color: #c44569;
+            color: white;
+            text-align: center;
+            padding: 2rem;
+        }
+
+        nav {
+            background-color: #786fa6;
+            padding: 1rem;
+            text-align: center;
+        }
+
+        nav a {
+            color: white;
+            margin: 0 15px;
+            text-decoration: none;
+            font-weight: bold;
+        }
+
+        nav a:hover {
+            text-decoration: underline;
+        }
+
+        section {
+            padding: 2rem;
+            margin: 1rem;
+            background-color: #ffffff;
+            border-radius: 12px;
+            box-shadow: 0 4px 6px rgba(0,0,0,0.1);
+        }
+
+        h2 {
+            color: #574b90;
+        }
+
+        footer {
+            background-color: #222;
+            color: #ddd;
+            text-align: center;
+            padding: 1rem;
+            margin-top: 2rem;
+        }
+    </style>
 </head>
 <body>
 
@@ -12,6 +65,15 @@
         <h1>'n Gids tot Dramastruktuur</h1>
         <p>Verstaan die basiese boustene en eienskappe van 'n toneelstuk.</p>
     </header>
+
+    <nav>
+        <a href="#kenmerke">Kenmerke</a>
+        <a href="#karaktereienskap">Karaktereienskap</a>
+        <a href="#struktuur">Struktuur</a>
+        <a href="#instruksieteks">Instruksieteks</a>
+        <a href="https://en.m.wikipedia.org/wiki/Drama" target="_blank">Meer oor Drama (Wiki)</a>
+        <a href="https://weet.co.za/skoolwerk/drama/" target="_blank">Afrikaanse Drama Bron</a>
+    </nav>
 
     <main>
         <section id="kenmerke">
@@ -45,21 +107,11 @@
             <h2>Die Struktuur van 'n Drama</h2>
             <p>'n Drama het 'n sekere volgorde of bou wat die storie help vertel.</p>
             <ol>
-                <li>
-                    <strong>Inleiding:</strong> Die begin van die drama. Hier ontmoet ons die karakters en sien waar die drama afspeel.
-                </li>
-                <li>
-                    <strong>Probleem / Konflik:</strong> Iets verkeerd of moeilik gebeur. Dit maak die storie interessant.
-                </li>
-                <li>
-                    <strong>Ontwikkeling:</strong> Die gebeure wat wys hoe die probleem groter raak. Die spanning bou op.
-                </li>
-                <li>
-                    <strong>Klimaks:</strong> Die belangrikste en spannendste deel van die drama. Die probleem raak baie groot of daar gebeur iets dramaties.
-                </li>
-                <li>
-                    <strong>Afloop / Oplossing:</strong> Die probleem word opgelos of die storie eindig. Dit kan 'n gelukkige of hartseer einde hê.
-                </li>
+                <li><strong>Inleiding:</strong> Die begin van die drama. Hier ontmoet ons die karakters en sien waar die drama afspeel.</li>
+                <li><strong>Probleem / Konflik:</strong> Iets verkeerd of moeilik gebeur. Dit maak die storie interessant.</li>
+                <li><strong>Ontwikkeling:</strong> Die gebeure wat wys hoe die probleem groter raak. Die spanning bou op.</li>
+                <li><strong>Klimaks:</strong> Die belangrikste en spannendste deel van die drama. Die probleem raak baie groot of daar gebeur iets dramaties.</li>
+                <li><strong>Afloop / Oplossing:</strong> Die probleem word opgelos of die storie eindig. Dit kan 'n gelukkige of hartseer einde hê.</li>
             </ol>
             <h3>Kort voorbeeld:</h3>
             <p>'n Meisie verloor haar hond (inleiding). Sy soek oral (probleem ontwikkel). Sy hoor die hond het vasgesit in 'n heining (klimaks). Sy red hom (oplossing).</p>
@@ -82,7 +134,6 @@ Piet hardloop na Anna en sê: "Wat het gebeur?"
 Anna sit haar hande op haar gesig en fluister: "Ek het my kat verloor."</code></pre>
             <p>Hierdie instruksies help die akteurs om presies te weet hoe om die storie te speel.</p>
         </section>
-
     </main>
 
     <footer>
